db/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: database
  name: service-db
  labels:
    app: redmine
    tier: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: redmine
    tier: mysql
  clusterIP: None
